--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -2,6 +2,7 @@ version: '3.5'
 services:
  zabbix-server:
   image: zabbix/zabbix-server-mysql:alpine-6.4-latest
+  restart: always
   ports:
    - "10051:10051"
   volumes:
@@ -124,6 +125,7 @@ services:
 
  zabbix-web-nginx-mysql:
   image: zabbix/zabbix-web-nginx-mysql:alpine-6.4-latest
+  restart: always
   ports:
    - "80:8080"
    - "443:8443"
@@ -179,9 +181,7 @@ services:
 
  zabbix-agent:
   image: zabbix/zabbix-agent:alpine-6.4-latest
-  profiles:
-   - full
-   - all
+  restart: always
   ports:
    - "10050:10050"
   volumes:
@@ -219,9 +219,7 @@ services:
 
  zabbix-snmptraps:
   image: zabbix/zabbix-snmptraps:alpine-6.4-latest
-  profiles:
-   - full
-   - all
+  restart: always
   ports:
    - "162:1162/udp"
   volumes:
@@ -248,9 +246,7 @@ services:
 
  zabbix-web-service:
   image: zabbix/zabbix-web-service:alpine-6.4-latest
-  profiles:
-   - full
-   - all
+  restart: always
   ports:
    - "10053:10053"
   volumes:
@@ -281,6 +277,7 @@ services:
 
  mysql-server:
   image: mysql:8.0-oracle
+  restart: always
   command:
    - mysqld
    - --character-set-server=utf8mb4
@@ -331,6 +328,8 @@ services:
      - ./postgres/data:/var/lib/postgresql/data/
  grafana:
    image: grafana/grafana:latest
+   restart: always
+   user: "1000"
    depends_on:
      - redis
      - postgres
@@ -366,6 +365,7 @@ services:
 
  redis:
    image: redis:latest
+   restart: always
    ports:
      - 6379:6379
    networks:
